<?xml version="1.0" encoding="utf-8"?>
<resources>
	<color name="white">#FFFFFF</color>
    <string name="app_name">SmartCATCH</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_string"></string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="problem_contacting_server">There was a problem contacting the server. Please try again later.</string>
    <string name="title_activity_splash">SmartCATCH</string>
    <string name="prefs">edu.mit.media.hellopds.SHAREDPREF</string>
    <string name="pref_local_key">localisation</string>
    <string name="pref_local_title">Localisation</string>
    <string name="pref_local_sum">Explanation</string>
    <string name="pref_screen_key">screenon</string>
    <string name="pref_screen_title">On/off screen</string>
    <string name="pref_screen_sum">Explanation</string>
    <string name="pref_move_key">movement</string>
    <string name="pref_move_title">Movement sensors</string>
    <string name="pref_move_sum">Explanation</string>

    <string name="pref_contact_key">contact</string>
    <string name="pref_contact_title">Contact us</string>
    <string name="pref_questions_key">questions</string>
    <string name="pref_questions_title">Questions</string>
    <string name="pref_results_key">results</string>
    <string name="pref_results_title">See your results</string>
    
    <string name="main_pipeline_config">
        {
        	"@type": "edu.mit.media.openpds.client.funf.OpenPDSPipeline",
        	"schedules": {
	         		"archive": {
        			"strict": false,
        			"interval": 86000
        		},
        		"upload": {
        			"strict": false,
        			"interval": 120
        		}
        	},
			"data": [
				{
					"@type": "edu.mit.media.funf.probe.builtin.ActivityProbe",
				    "@schedule": {
					    "strict": true,
					    "interval": 300,
					    "duration": 15,
					    "opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.WifiProbe",
					"@schedule": {
						"strict": false,
						"interval": 300, 
						"opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.BluetoothProbe",
					"@schedule": {
						"strict": false,
						"interval": 300, 
						"opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.SmsProbe",
					"@schedule": {
						"strict": true,
						"interval": 3600, 
						"opportunistic": true
					}
				},				
				{
					"@type": "edu.mit.media.funf.probe.builtin.CallLogProbe",
				    "@schedule": {
					    "strict": true,
					    "interval": 3600,
					    "opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.ScreenProbe",
					"maxScanTime": 40,
					"@schedule": {
						"strict": true,
						"opportunistic": true
					}
				},
				{
					"@type": "edu.mit.media.funf.probe.builtin.LocationProbe",
				    "@schedule": {
					    "strict": false,
					    "interval": 900,
					    "opportunistic": true
					}
				},
			],
			"GCMSenderId": "724884266172"
        }
	</string>
	
</resources>
